# Food-shop

./: AdditionalItems.c  Buyer_Struct_Functions.c  Buyer_Struct_Functions.h  CMakeLists.txt  Cutlery.c  Drinks_Struct_Functions.c  Drinks_Struct_Functions.h  Food.c  FreeMemory.c  Functions.h  SpecificFood_Struct_Functions.c  SpecificFood_Struct_Functions.h  StringFunctions.c  StringFunctions.h  User.c  main.c
